        quotes, i.e., 'fo\o''bar' ⇒ fo\o'bar
    * Command line is now hidden by default. Added c, C, and M to
      'guioptions'.
    * Hint mode improvements, including:
      - Added g; continued extended hint mode, which allows
        selecting multiple hints. Removed ;F.
      - Hints are now updated after scrolling and window resizing.
      - Added ;S mode for creating search keywords.
      - Added 'hintkeys' option.
      - Added "transliterated" option to 'hintmatching'.
    * JavaScript completion improvements, including:
      - The prototype of the function whose arguments are currently
        being typed is displayed during completion.
      - Non-enumerable global properties are now completed for the
        global object, including XMLHttpRequest and encodeURI.
    * The concept of completion contexts is now exposed to the user
      (see :h :contexts), allowing for powerful and fine-grained
      completion system customization.
    * The external editor can now be configured to open to a given
      line number and column, used for opening source links and
      editing input fields with <C-i>. See :h 'editor'.
    * Command changes:
      - :viusage, :optionusage and :exusage were replaced with :listkeys,
        :listoptions and :listcommands, providing more powerful and
        consistent interactive help facility (improvements include
        listing keys for modes other than Normal, filtering the output
        and linking to source locations).
      - Added :cookies command.
      * :extadd now supports remote URLs as well as local files on Firefox 4.
      * Added :if/:elseif/:else/:endif conditionals.
      - Added -charset and -post to :bmark.
      - Added -keyword, -tags, -title to :delbmarks.
      - Added :extrehash, :exttoggle, :extupdate, and :rehash commands.
      - Added :feedkeys command.
      - Added -sort option to :history.
      - Added several new options, including -javascript, to :abbrev and :map.